--- a/Softwarehouse/Softwarehouse/Views/Shared/_Layout.cshtml
+++ b/Softwarehouse/Softwarehouse/Views/Shared/_Layout.cshtml
@@ -7,41 +7,71 @@
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/angular.min.js"></script>
+    <!--JQuery Tooltipster-->
+    <script src="~/Scripts/jquery.tooltipster.js"></script>
+    <link href="~/Content/Tooltipster/css/tooltipster.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/Tooltipster/css/themes/tooltipster-punk.css" rel="stylesheet" type="text/css" />
     <!--JQuery Validation-->
     <script src="~/Scripts/JQueryValidate/jquery.validate.min.js"></script>
     <script src="~/Scripts/JQueryValidate/additional-methods.min.js"></script>
     <script src="~/Scripts/JQueryValidate/localization/messages_zh_TW.min.js"></script>
-    <!--BootStrap Dialog-->
-    <script src="~/Scripts/bootstrap-dialog.js"></script>
-    <link href="~/Content/bootstrap-dialog.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("SoftwareHouse", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+            <a class="navbar-brand" href="@Url.Action("Index", "Home")">軟體倉庫 Softwarehouse</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">
+                            Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
                 </ul>
+                @{if (Helper.SiteHelper.IsLogin())
+                    {
+                        <div>
+                            歡迎, @Helper.FrontEndMemberHelper.CurrentMemberData.Account
+                            <a href="@Url.Action("SignOut", "Login")">登出</a>
+                        </div>
+                    }
+                    else
+                    {
+                        <div>
+                            <a href="@Url.Action("Index", "Login")">登入</a>
+                        </div>
+                    } }
             </div>
         </div>
-    </div>
-
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - SoftwareHouse</p>
-        </footer>
+    </nav>
+    <!-- Page Content -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                @RenderBody()
+                <hr />
+                <footer>
+                    <p>&copy; @DateTime.Now.Year - SoftwareHouse</p>
+                </footer>
+            </div>
+        </div>
     </div>
 </body>
 </html>
