1.加入重新設定密碼 2.Service重新命名

--- a/Softwarehouse/Softwarehouse/Views/Login/Index.cshtml
+++ b/Softwarehouse/Softwarehouse/Views/Login/Index.cshtml
@@ -64,7 +64,7 @@
                                 <div class="form-group">
                                     <label for="Password">
                                         密碼
-                                        <a href="@Url.Action("ForgetPassword", "Login")" class="float-right">
+                                        <a href="@Url.Action("Index", "ForgotPassword")" class="float-right">
                                             忘記密碼?
                                         </a>
                                     </label>
