--- a/Softwarehouse/Softwarehouse/Views/ForgotPassword/ResetPassword.cshtml
+++ b/Softwarehouse/Softwarehouse/Views/ForgotPassword/ResetPassword.cshtml
@@ -1,17 +1,103 @@
-﻿
+﻿@model Softwarehouse.ViewModels.ResetPasswordViewModel
 @{
-    Layout = null;
+
+    ViewBag.Title = "重新設定密碼";
 }
 
 <!DOCTYPE html>
-
-<html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>ResetPassword</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="~/Content/custom/login.css">
+    <script src="~/Scripts/custom/login.js"></script>
+    <title>@ViewBag.Title</title>
+    <script>
+        $(document).ready(function () {
+            $('#FormRegister input').tooltipster({
+                trigger: 'custom', // default is 'hover' which is no good here
+                onlyOne: false,    // allow multiple tips to be open at a time
+                position: 'right'  // display the tips to the right of the element
+            });
+            var validator = $("#FormRegister").validate({
+                rules: {
+                    NewPassword: { required: true },
+                    ConfirmNewPassword: {
+                        required: true,
+                        equalTo: "#NewPassword"
+                    },
+                    agree: { required: true }
+                },
+                messages: {
+                    ConfirmPassword: {
+                        equalTo:"與密碼不相符"
+                    }
+                },
+                // any other options & rules,
+                errorPlacement: function (error, element) {
+                    var lastError = $(element).data('lastError'),
+                        newError = $(error).text();
+
+                    $(element).data('lastError', newError);
+
+                    if (newError !== '' && newError !== lastError) {
+                        $(element).tooltipster('content', newError);
+                        $(element).tooltipster('show');
+                    }
+                },
+                success: function (label, element) {
+                    $(element).tooltipster('hide');
+                }
+            });
+            $('#btnConfirmResetPassword').click(function () {
+                if ($("#FormResetPassword").valid()) {
+                    $.ajax({
+                        url: '@Url.Action("ConfirmResetPassword")',
+                        type: 'Post',
+                        data: $("#FormResetPassword").serialize(),
+                        success: function (serviceResult) {
+                            if (serviceResult.Result) {
+                                alert('重設密碼成功!');
+                            }
+                            else {
+                                alert(serviceResult.ErrorMessage);
+                            }
+                        }
+                    });
+                }
+            });
+        });
+    </script>
 </head>
-<body>
-    <div> 
-    </div>
+<body class="my-login-page">
+    <section class="h-100">
+        <div class="container h-100">
+            <div class="row justify-content-md-center h-100">
+                <div class="card-wrapper">
+                    <div class="card fat">
+                        <div class="card-body">
+                            <h4 class="card-title">重新設定密碼</h4>
+                            <form id="FormResetPassword" method="POST">
+                                @Html.HiddenFor(m=>m.UniqueKey)
+                                @Html.HiddenFor(m=>m.MemberAccount)
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.NewPassword)
+                                    <input id="NewPassword" type="password" class="form-control" name="NewPassword" data-eye>
+                                </div>
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.ConfirmNewPassword)
+                                    <input id="ConfirmNewPassword" type="password" class="form-control" name="ConfirmNewPassword" data-eye>
+                                </div>
+                                <div class="form-group no-margin">
+                                    <button type="button" class="btn btn-primary btn-block" id="btnConfirmResetPassword">
+                                        確定重設
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
-</html>
